--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,15 +1,19 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@use "variables" as v; // Partials
+@import url(./resets.scss); // regular imports
+
+//Mixin
+@mixin gradiants($deg:100deg){
+  background: linear-gradient($deg,
+      v.$color-peach,
+      v.$color-violet);
 }
 
 body {
   font-family: "Teachers", sans-serif;
   background: linear-gradient(
     106.5deg,
-    rgba(255, 215, 185, 0.91) 23%,
-    rgba(223, 159, 247, 0.8) 93%
+    v.$color-peach,
+    v.$color-violet
   );
   animation-name: golgol;
   animation-duration: 5s;
@@ -18,7 +22,7 @@ body {
 }
 
 ::selection {
-  background: red;
+  background: v.$color-red;
   color: white;
 }
 
@@ -26,29 +30,28 @@ body {
   0% {
     background: linear-gradient(
       20deg,
-      rgba(255, 215, 185, 0.91) 23%,
-      rgba(223, 159, 247, 0.8) 93%
+      v.$color-peach,
+      v.$color-violet
     );
   }
   25% {
     background: linear-gradient(
       80deg,
-      rgba(255, 215, 185, 0.91) 23%,
-      rgba(223, 159, 247, 0.8) 93%
+      v.$color-peach,
+      v.$color-violet
     );
   }
   50% {
     background: linear-gradient(
       120deg,
-      rgba(255, 215, 185, 0.91) 23%,
-      rgba(223, 159, 247, 0.8) 93%
-    );
+      v.$color-peach,
+      v.$color-violet    );
   }
   100% {
     background: linear-gradient(
       160deg,
-      rgba(255, 215, 185, 0.91) 23%,
-      rgba(223, 159, 247, 0.8) 93%
+      v.$color-peach,
+      v.$color-violet
     );
   }
 }
@@ -72,36 +75,34 @@ aside {
 header {
   display: flex;
   justify-content: space-between;
-}
 
-.logo {
-  height: 20px;
-  width: 20px;
-  background: black;
-  transform: rotate(45deg);
-  transition: 0.5s ease;
-}
+  .logo {
+    height: 20px;
+    width: 20px;
+    background: black;
+    transform: rotate(45deg);
+    transition: 0.5s ease;
+  
+    &:hover {
+      cursor: pointer;
+      transform: rotate(90deg);
+      border-radius: 6px;
+    }
+  }
+  ul {
+    list-style: none;
+    text-align: right;
+    color: v.$color-red;
+    cursor: pointer;
 
-.logo:hover {
-  cursor: pointer;
-  transform: rotate(90deg);
-  border-radius: 6px;
+    li:first-child {
+      font-weight: 600;
+      margin-bottom: 25px;
+      color: black;
+      font-size: 20px;
+    }
+  }
 }
-
-header ul {
-  list-style: none;
-  text-align: right;
-  color: red;
-  cursor: pointer;
-}
-
-header ul li:first-child {
-  font-weight: 600;
-  margin-bottom: 25px;
-  color: black;
-  font-size: 20px;
-}
-
 /* Main */
 h1 {
   font-size: 70px;
@@ -112,23 +113,25 @@ h1 {
 /* Footer */
 footer {
   align-self: center;
+
+  p {
+    font-size: 12px;
+    width: 80%;
+  }
 }
-footer p {
-  font-size: 12px;
-  width: 80%;
-}
+
 
 /* ASIDE */
 aside {
   grid-column: 2;
   grid-row: 1 / -1;
   padding-right: 10vw;
-}
 
-aside video {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+  video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 /* 
